--- a/packages/monday-hosted-mcp/package.json
+++ b/packages/monday-hosted-mcp/package.json
@@ -24,7 +24,7 @@
     "zod": "^3.24.2"
   },
   "dependencies": {
-    "@mondaydotcomorg/agent-toolkit": "^2.0.3",
+    "@mondaydotcomorg/agent-toolkit": "*",
     "monday-sdk-js": "^0.5.4",
     "simple-oauth2": "^5.1.0"
   }
