--- a/packages/monday-hosted-mcp/package.json
+++ b/packages/monday-hosted-mcp/package.json
@@ -9,17 +9,17 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/workers-oauth-provider": "^0.0.2",
-    "@cloudflare/workers-types": "^4.20250507.0",
-    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@cloudflare/workers-oauth-provider": "^0.0.5",
+    "@cloudflare/workers-types": "^4.20250513.0",
+    "@modelcontextprotocol/sdk": "^1.11.2",
     "@types/node-fetch": "^2.6.12",
     "@types/simple-oauth2": "^5.0.7",
-    "agents": "^0.0.53",
+    "agents": "^0.0.86",
     "hono": "^4.7.4",
     "just-pick": "^4.2.0",
     "prettier": "^3.5.3",
     "typescript": "^5.5.2",
-    "workers-mcp": "0.1.0-3",
+    "workers-mcp": "^0.0.13",
     "wrangler": "^4.14.3",
     "zod": "^3.24.2"
   },
