--- a/packages/monday-hosted-mcp/package.json
+++ b/packages/monday-hosted-mcp/package.json
@@ -19,7 +19,7 @@
     "just-pick": "^4.2.0",
     "prettier": "^3.5.3",
     "typescript": "^5.5.2",
-    "workers-mcp": "^0.0.13",
+    "workers-mcp": "0.1.0-3",
     "wrangler": "^4.14.3",
     "zod": "^3.24.2"
   },
