--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,12 @@
-name: Automated Version Bump
+name: Release
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    types:
-      - labeled
 
 jobs:
-  version-bump:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action == 'labeled')
+  release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -33,10 +29,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      # Bump version using labels (bump:major, bump:minor, bump:patch)
+      # Bump version based on merged PR labels
       - name: Bump version and create tag
         id: bumpr
-        if: github.event_name == 'push'
         uses: haya14busa/action-bumpr@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -44,17 +39,9 @@ jobs:
           tag_as_user: 'github-actions[bot]'
           tag_as_email: 'github-actions[bot]@users.noreply.github.com'
 
-      # Check for label on PR (for dry-run/validation)
-      - name: Check version bump (PR)
-        if: github.event_name == 'pull_request'
-        uses: haya14busa/action-bumpr@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          dry_run: true
-
       # Update package.json files if version was bumped
       - name: Update package versions
-        if: github.event_name == 'push' && !steps.bumpr.outputs.skip
+        if: ${{ !steps.bumpr.outputs.skip }}
         run: |
           NEW_VERSION="${{ steps.bumpr.outputs.next_version }}"
           NEW_VERSION_NO_V="${NEW_VERSION#v}"
@@ -76,7 +63,7 @@ jobs:
 
       # Commit the version updates
       - name: Commit version updates
-        if: github.event_name == 'push' && !steps.bumpr.outputs.skip
+        if: ${{ !steps.bumpr.outputs.skip }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -86,12 +73,12 @@ jobs:
 
       # Build packages after version bump
       - name: Build packages
-        if: github.event_name == 'push' && !steps.bumpr.outputs.skip
+        if: ${{ !steps.bumpr.outputs.skip }}
         run: yarn build
 
       # Create GitHub Release
       - name: Create GitHub Release
-        if: github.event_name == 'push' && !steps.bumpr.outputs.skip
+        if: ${{ !steps.bumpr.outputs.skip }}
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -107,30 +94,15 @@ jobs:
             - @mondaydotcomorg/agent-toolkit
             - @mondaydotcomorg/monday-api-mcp
 
-            Auto-generated release from version bump workflow.
+            Auto-generated release from Release workflow.
           draft: false
           prerelease: false
 
-  # Job to comment on PR about version bump
-  pr-comment:
-    if: github.event_name == 'pull_request' && github.event.action == 'labeled'
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Comment on PR
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const labels = context.payload.pull_request.labels.map(label => label.name);
-            const versionLabels = labels.filter(label => label.startsWith('bump:'));
-
-            if (versionLabels.length > 0) {
-              const versionType = versionLabels[0].replace('bump:', '');
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: `🏷️ **Version Bump Detected**\n\nThis PR is labeled for a **${versionType}** version bump.\n\nWhen merged, this will automatically:\n- Bump the version across all packages\n- Create a new git tag\n- Create a GitHub release\n- Trigger the publish workflow`
-              });
-            }
+      # Output results
+      - name: Release Summary
+        if: ${{ !steps.bumpr.outputs.skip }}
+        run: |
+          echo "🚀 Release completed!"
+          echo "📋 Version: ${{ steps.bumpr.outputs.next_version }}"
+          echo "📦 Packages updated and published"
+          echo "🏷️ GitHub release created"
