feat(agent-toolkit): add createForm mutation and related tools
- Introduced CreateFormTool to facilitate form creation.
- Added createForm GraphQL mutation to handle form creation requests.
- Updated package.json to include @mondaydotcomorg/workforms-contracts dependency.
- Enhanced GraphQL types to support the new mutation.

--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@mondaydotcomorg/api": "^10.0.5",
+    "@mondaydotcomorg/workforms-contracts": "^1.26.4",
     "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.2",
