--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mondaydotcomorg/agent-toolkit",
-  "version": "2.23.0",
+  "version": "2.23.1",
   "description": "monday.com agent toolkit",
   "exports": {
     "./mcp": {
@@ -29,9 +29,10 @@
     "lint": "eslint --fix \"src/**/*.ts\" --ignore-path \"../../.eslintignore\"",
     "test": "jest -c",
     "watch": "rollup -c -w",
-    "fetch:schema": "bash fetch-schema.sh",
+    "fetch:schema": "bash fetch-schema.sh && yarn update:schema-version",
+    "update:schema-version": "bash update-version.sh",
     "codegen": "graphql-codegen",
-    "fetch:generate": "yarn fetch:schema && yarn codegen"
+    "fetch:generate": "yarn fetch:schema && yarn update:schema-version && yarn codegen"
   },
   "engines": {
     "node": ">= 16.20.0"
