--- a/packages/monday-api-mcp/package.json
+++ b/packages/monday-api-mcp/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.2",
     "@mondaydotcomorg/agent-toolkit": "*",
-    "dotenv": "^16.4.7"
+    "@mondaydotcomorg/atp-client": "^0.19.3",
+    "@mondaydotcomorg/atp-server": "^0.19.3",
+    "dotenv": "^16.4.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
