--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 20.12
+          node-version: '20.18.1'
           registry-url: https://registry.npmjs.org/
 
       - name: Install Yarn
