--- a/packages/monday-api-mcp/package.json
+++ b/packages/monday-api-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mondaydotcomorg/monday-api-mcp",
-  "version": "1.11.3",
+  "version": "1.12.0",
   "description": "MCP server for using the monday.com API",
   "mcpName": "com.monday/monday.com",
   "license": "MIT",
@@ -25,7 +25,11 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.2",
     "@mondaydotcomorg/agent-toolkit": "*",
-    "dotenv": "^16.4.7"
+    "@mondaydotcomorg/atp-client": "^0.19.6",
+    "@mondaydotcomorg/atp-mcp-adapter": "^0.19.7",
+    "@mondaydotcomorg/atp-server": "^0.19.7",
+    "dotenv": "^16.4.7",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
