--- a/packages/monday-api-mcp/package.json
+++ b/packages/monday-api-mcp/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@mondaydotcomorg/monday-api-mcp",
-  "version": "1.12.3",
+  "version": "1.12.4",
   "description": "MCP server for using the monday.com API",
   "mcpName": "com.monday/monday.com",
   "license": "MIT",
   "bin": {
     "mcp-server-monday-api": "dist/index.js"
   },
-  "main": "dist/index.js",
+  "main": "dist/lib.js",
   "files": [
     "dist"
   ],
