Add the main entry point (#161)
* Add the main entry point

* Add dummy file

--- a/packages/monday-api-mcp/package.json
+++ b/packages/monday-api-mcp/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@mondaydotcomorg/monday-api-mcp",
-  "version": "1.12.7",
+  "version": "1.12.8",
   "description": "MCP server for using the monday.com API",
   "mcpName": "com.monday/monday.com",
   "license": "MIT",
   "bin": {
     "mcp-server-monday-api": "dist/index.js"
   },
+  "main": "dist/lib.js",
   "files": [
     "dist"
   ],
