Adjust project to support multiple schemas

--- a/packages/agent-toolkit/graphql.config.yml
+++ b/packages/agent-toolkit/graphql.config.yml
@@ -4,3 +4,7 @@ projects:
     documents:
       - ./src/**/*.graphql
       - ./src/**/*.graphql.ts
+      - '!./src/**/*.graphql-dev.ts'
+  dev:
+    schema: ./src/monday-graphql/schema-dev.graphql
+    documents: ./src/**/*.graphql-dev.ts
