--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -30,8 +30,8 @@
     "test": "jest -c",
     "watch": "rollup -c -w",
     "fetch:schema": "bash fetch-schema.sh",
-    "codegen": "graphql-codegen --config codegen.yml && graphql-codegen --config codegen.yml --project dev",
-    "fetch:generate": "yarn fetch:schema && yarn codegen"
+    "codegen": "bash codegen.sh",
+    "fetch:generate": "bash fetch-and-generate.sh"
   },
   "engines": {
     "node": ">= 16.20.0"
