--- a/packages/agent-toolkit/codegen.yml
+++ b/packages/agent-toolkit/codegen.yml
@@ -4,7 +4,7 @@ projects:
     schema: 'src/monday-graphql/schema.graphql'
     documents: 
       - 'src/**/*.graphql.ts'
-      - '!src/**/*.graphql-dev.ts'
+      - '!src/**/*.graphql.dev.ts'
     ignoreNoDocuments: true
     extensions:
       codegen:
@@ -17,8 +17,8 @@ projects:
               afterOneFileWrite:
                 - node -e "const fs = require('fs'); fs.writeFileSync('src/monday-graphql/generated/graphql/index.ts', '/* eslint-disable */\nexport * from \'./gql\';');"
   dev:
-    schema: 'src/monday-graphql/schema-dev.graphql'
-    documents: 'src/**/*.graphql-dev.ts'
+    schema: 'src/monday-graphql/schema.dev.graphql'
+    documents: 'src/**/*.graphql.dev.ts'
     ignoreNoDocuments: true
     extensions:
       codegen:
