Allow MCP to use dev schema for experimental features (#179)
* Adjust project to support multiple schemas

* Generate dev client

* Make search_items use dev client from now on

* Fix test cases

* Bump versions

* Adjust naming

* Adjust tests due to naming difference

* Fix test case

* Add the option to build dev and default schema independently

* Call dev version inline

* Adjust tests back

* Adjust last tests

* Fix last test

* Remove extra space

* Run prettier

* Adjust naming

* Push newly named schema

* Adjust naming

* Use correctly new naming

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -4,3 +4,7 @@ projects:
     documents:
       - ./packages/agent-toolkit/src/**/*.graphql
       - ./packages/agent-toolkit/src/**/*.graphql.ts
+      - '!./packages/agent-toolkit/src/**/*.graphql.dev.ts'
+  dev:
+    schema: ./packages/agent-toolkit/src/monday-graphql/schema.dev.graphql
+    documents: ./packages/agent-toolkit/src/**/*.graphql.dev.ts
