--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monday-ai",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "monday.com AI repository",
   "private": true,
   "packageManager": "yarn@1.22.21",
@@ -24,6 +24,6 @@
   "workspaces": [
     "packages/*"
   ],
-  "author": "monday.com AI Team",
+  "author": "monday.com",
   "license": "MIT"
 }
