--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -36,7 +36,7 @@
   "engines": {
     "node": ">= 16.20.0"
   },
-  "author": "monday.com AI Team",
+  "author": "monday.com",
   "license": "MIT",
   "keywords": [
     "monday",
